@@ -1,5 +1,11 @@
 New Features and Bug Fixes since v0.2, preview 1
 
+ * Added warnings for detectable module-level modifications of mutables
+   in modules which are used for inheritances or advice.  Added an API
+   function, 'configure(object, attr1=val, attr2=val,...)' to safely
+   set attributes of mutables that might have been defined in a derived
+   module.
+
  * Removed 'Meta.ClassInit' and '__class_init__' support.  Use metaclass
    '__init__' methods instead; see 'TW.Database.DataModel.RecordTypeMC'
    for one example of the conversion.
